--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> This is a title! Yay! </title>
+    </head>
+
+    <body>
+        This is the contect for this specific document wooo.
+    </body>
+
+
+</html>
+
+
